# elisam_dev

./: .gitignore  .vale.ini  Cargo.toml  Dockerfile  Makefile  hot-update-site.sh  make_package.sh  run_caddy.sh  run_site.sh  rustfmt.toml
.github/workflows/: deploy.yml
blog/2024-03-26/: making-a-blog-with-rust-and-orgmode.html
caddy/: Caddyfile
docker/: Dockerfile  ubuntu_builder.sh
src/: blog.rs  context.rs  main.rs  routes.rs  server.rs  test.rs  tests.rs
systemd/: run_caddy.service  run_site.service  setup-systemd.sh
templates/: 404.html.tera  500.html.tera  base.html.tera  blog-rss.xml.tera  centerpage.html.tera  github.html.tera  head.html.tera  index.html.tera  linkedin.html.tera  navbar.html.tera  resume.html.tera
templates/blog/: blog_article.html.tera  blog_base.html.tera  blog_root.html.tera
