[package]
name = "elisam_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1.0"
log = "0.4.8"
chrono = { version = "0.4.9", features = ["serde"] }
select = "0.4.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve"]