[package]
name = "elisam_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }  # Updated to stable version
log = "0.4"
simple_logger = "4.0"
chrono = { version = "0.4", features = ["serde"] }
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }